Correct title alignement

--- a/site/assets/less/j4x.less
+++ b/site/assets/less/j4x.less
@@ -19,6 +19,11 @@
 #flexicontent .flexi .flexi.element { /*** reset margin arround field for better alignement in content ***/
 	margin: 0.2em 2% 0.2em 0% !important;
 }
+/*** correct title margin **/
+.contentheading {
+	display: inherit;
+	margin: 0 0 0.5em 0px;
+}
 
 /** markup **/
 #flexicontent .fc_markup.mu_has_text {
